# evopop-gtk-theme

./: .gitignore  AUTHORS  CREDITS  Makefile.am  README.md  configure.ac  gtk.css  install-geary-fix.sh  install-gtk-azure-theme.sh  install-gtk-theme.sh  install.sh
EvoPop/: index.theme
EvoPop-Azure/: index.theme
EvoPop-Azure/gnome-shell/: gnome-shell.css
EvoPop-Azure/gtk-2.0/: gtkrc  main.rc
EvoPop-Azure/gtk-3.0/: gtk-dark.css  gtk.css
EvoPop-Azure/metacity-1/: metacity-theme.xml
EvoPop/gnome-shell/: gnome-shell.css
EvoPop/gtk-2.0/: gtkrc  main.rc
EvoPop/gtk-3.0/: _apps.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  gtk-dark.css  gtk-dark.scss  gtk.css  gtk.scss
EvoPop/gtk-3.20/: _colors.scss  _common.scss  _drawing.scss  gtk-dark.css  gtk.css
EvoPop/metacity-1/: metacity-theme.xml
EvoPop/plank/: dock.theme
EvoPop/xfwm4/: bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-prelight.xpm  hide-pressed.xpm  left-inactive.xpm  maximize-prelight.xpm  menu-active.xpm  menu-prelight.xpm  menu-pressed.xpm  right-inactive.xpm  shade-prelight.xpm  shade-pressed.xpm  shade-toggled-active.xpm  shade-toggled-prelight.xpm  stick-inactive.xpm  stick-toggled-prelight.xpm  stick-toggled-pressed.xpm  themerc  title-1-active.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-5-active.xpm  top-left-active.xpm  top-left-inactive.xpm  top-right-active.xpm  top-right-inactive.xpm
evopop-gtk-theme/gtk-2.0/: gtkrc
evopop-gtk-theme/gtk-3.0/: gtk-dark.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css
evopop-gtk-theme/gtk-3.16/: gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css
evopop-gtk-theme/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
evopop-gtk-theme/xfwm4/: bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  hide-inactive.xpm  left-active.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  menu-inactive.xpm  right-active.xpm  shade-active.xpm  shade-inactive.xpm  shade-toggled-inactive.xpm  shade-toggled-pressed.xpm  stick-active.xpm  stick-prelight.xpm  stick-pressed.xpm  stick-toggled-active.xpm  stick-toggled-inactive.xpm  title-1-inactive.xpm  title-4-inactive.xpm  title-5-inactive.xpm
evopop-light-gtk-theme/: index.theme
gtk-2.0/: gtkrc
gtk-2.0/styles/: button  (+17 more)
gtk-3.0/: gtk-dark.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css
metacity-1/: metacity-theme-3.xml
sass/: README.md  _colors.scss  _drawing.scss
src/: render-gtk3-assets-hidpi.py  render-gtk3-assets.py  render-wm-assets-hidpi.py  render-wm-assets.py
(+329 files in other folders)
